src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
/* ... */
.product-edit-form > header .actions .btn-group {
  font-weight: 200;

  &.hidden {
    display: none;
  }
}

.product-edit-form > header .btn-dropdown {
  .btn.dropdown-toggle {
    padding: 0;

    &:first-child {
      .display-flex();
    }

    &:not(:first-child) {
      margin-left: 0;
      border-left: none;
    }

    .caret {
      margin: 15px 12px;
    }
  }
}


.status-switcher.btn-dropdown {
  &.enabled > a, & > .enabled {
    opacity: 1;
    background-color: lighten(@color-new-green, 30%) !important;
    color: darken(@color-new-green, 20%);
    border: solid 1px @color-new-green;

    .icon-caret-down {
      width: 34px;
      height: 34px;
      line-height: 34px;
      background-color: lighten(@color-new-green, 30%);
      border-left: solid 1px @color-new-green;
      color: darken(@color-new-green, 20%);
      margin: 0;
    }
  }

  &.disabled > a, & > .disabled {
    opacity: 1;
    background-color: lighten(@color-new-red, 30%) !important;
    color: darken(@color-new-red, 20%);
    border: solid 1px @color-new-red;

    .icon-caret-down {
      width: 34px;
      height: 34px;
      line-height: 34px;
      background-color: lighten(@color-new-red, 30%);
      border-left: solid 1px @color-new-red;
      color: darken(@color-new-red, 20%);
      margin: 0;
    }
  }
}

.product-status {
  padding: 0 10px;
}

.updated-status {
  margin-top: 5px;
  transition: opacity .4s ease-in-out;

  .label-warning {
    color: #777;
    font-weight: 400;
    text-shadow: none;
    background-color: #fdd9b6;
    border-radius: 10px;
    padding-right: 7px;
  }

  .icon {
    position: relative;
    left: -2px;
    color: #fa9f47;
  }
}

.attribute-info {
  display: inline-block;
  min-width: 120px;
  padding-left: 10px;
  color: #777;
  > span {
    padding-left: 3px;
  }
}

.note-link-dialog {
  .modal-title {
    color: white;
    line-height: 12px;
  }
  .checkbox {
    input {
      width: 22px;
      margin-right: 5px;
    }
    label {
      line-height: 36px;
    }
  }
  .modal-footer .btn-primary {
    background-color: #7dbf16;
  }
}

.meta {
  i {
    color: @color-new-purple-medium;

    &:hover {
      cursor: pointer;
    }
  }

  .product-family, .product-groups {
    flex-shrink: 0;
  }
}

.comparison-elements-container {
  .media-uploader .preview .info .actions {
    display: none;
  }
}

.page-error-block {
  width: 600px;
  border-radius: 5px;
  background: #efefef;
  margin: auto;
  margin-top: 100px;
  padding: 10px;

  img {
    float: left;
    margin: 0 20px 0 0;
  }
}

.oro-config-system {
  .select2-container {
    min-width: 300px;
  }
}

.scopable-input .note-editor {
  display: inline-block;
}

